Optimizing code logic    #main

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,11 +22,14 @@ include_directories(${PROJECT_SOURCE_DIR}/src/common/ini)
 include_directories(${PROJECT_SOURCE_DIR}/src/common/work_base)
 include_directories(${PROJECT_SOURCE_DIR}/src/robots/xiaohai_robot)
 include_directories(${PROJECT_SOURCE_DIR}/src/common/tcp_client)
+include_directories(${PROJECT_SOURCE_DIR}/src/common/udp_client)
 include_directories(${PROJECT_SOURCE_DIR}/src/common/serial_communication)
 include_directories(${PROJECT_SOURCE_DIR}/src/component/gas_detection)
 include_directories(${PROJECT_SOURCE_DIR}/src/component/nuclear_radiation_measuring)
 include_directories(${PROJECT_SOURCE_DIR}/src/component/robot_arm_device/dz_robot_arm/include)
 include_directories(${PROJECT_SOURCE_DIR}/src/component/robot_arm_device/dz_robot_arm)
+include_directories(${PROJECT_SOURCE_DIR}/src/component/chassis_device/yixin_chassis_device)
+
 
 aux_source_directory(${PROJECT_SOURCE_DIR} DIR_SRCS)
 aux_source_directory(${PROJECT_SOURCE_DIR}/src DIR_SRCS)
@@ -35,10 +38,12 @@ aux_source_directory(${PROJECT_SOURCE_DIR}/src/common/ini DIR_SRCS)
 aux_source_directory(${PROJECT_SOURCE_DIR}/src/common/work_base DIR_SRCS)
 aux_source_directory(${PROJECT_SOURCE_DIR}/src/robots/xiaohai_robot DIR_SRCS)
 aux_source_directory(${PROJECT_SOURCE_DIR}/src/common/tcp_client DIR_SRCS)
+aux_source_directory(${PROJECT_SOURCE_DIR}/src/common/udp_client DIR_SRCS)
 aux_source_directory(${PROJECT_SOURCE_DIR}/src/common/serial_communication DIR_SRCS)
 aux_source_directory(${PROJECT_SOURCE_DIR}/src/component/gas_detection DIR_SRCS)
 aux_source_directory(${PROJECT_SOURCE_DIR}/src/component/nuclear_radiation_measuring DIR_SRCS)
 aux_source_directory(${PROJECT_SOURCE_DIR}/src/component/robot_arm_device/dz_robot_arm DIR_SRCS)
+aux_source_directory(${PROJECT_SOURCE_DIR}/src/component/chassis_device/yixin_chassis_device DIR_SRCS)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
 
