--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,7 @@ include_directories(${PROJECT_SOURCE_DIR}/src/component/nuclear_radiation_measur
 include_directories(${PROJECT_SOURCE_DIR}/src/component/robot_arm_device/dz_robot_arm/include)
 include_directories(${PROJECT_SOURCE_DIR}/src/component/robot_arm_device/dz_robot_arm)
 include_directories(${PROJECT_SOURCE_DIR}/src/component/chassis_device/yixin_chassis_device)
+include_directories(${PROJECT_SOURCE_DIR}/src/component/xf)
 
 
 aux_source_directory(${PROJECT_SOURCE_DIR} DIR_SRCS)
@@ -44,6 +45,7 @@ aux_source_directory(${PROJECT_SOURCE_DIR}/src/component/gas_detection DIR_SRCS)
 aux_source_directory(${PROJECT_SOURCE_DIR}/src/component/nuclear_radiation_measuring DIR_SRCS)
 aux_source_directory(${PROJECT_SOURCE_DIR}/src/component/robot_arm_device/dz_robot_arm DIR_SRCS)
 aux_source_directory(${PROJECT_SOURCE_DIR}/src/component/chassis_device/yixin_chassis_device DIR_SRCS)
+aux_source_directory(${PROJECT_SOURCE_DIR}/src/component/xf DIR_SRCS)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
 
@@ -51,6 +53,7 @@ link_directories(${PROJECT_SOURCE_DIR}/src/component/robot_arm_device/dz_robot_a
 
 add_executable(${target} ${DIR_SRCS})
 # target_link_libraries(${target} /usr/local/lib/libHR_Pro.so)
+target_link_libraries(${target} msc rt dl pthread asound stdc++ SDL2)
 target_link_libraries(${target} HR_Pro)
 target_link_libraries(${target} pthread)
 target_link_libraries(${target} ${CMAKE_THREAD_LIBS_INIT})
